# Point_of_Sale_System

./: .gitignore  Base.cpp  Base.h  BaseInterface.cpp  BaseInterface.h  CMakeLists.txt  Customer.cpp  Customer.h  Employee.cpp  Employee.h  Item.cpp  Item.h  ItemIn.h  Main.cpp  Manager.cpp  Manager.h  Owner.cpp  Owner.h  PaymentPortal.cpp  PaymentPortal.h  README.md  SPass.h  Settings.cpp  Settings.h  Tester.cpp  Tester.h  Transaction.cpp  Transaction.h  graph.py  imGuiTest.cpp
data/live_files/: Customers.json  Items.json  Settings.json  Transactions.json  paymentPortal.json
data/test_files/: Items.json  Settings.json
